; ModuleID = '/home/carl/AnghaBench/git/extr_ref-filter.c_pop_stack_element.c'
source_filename = "/home/carl/AnghaBench/git/extr_ref-filter.c_pop_stack_element.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_formatting_stack = type { i32, %struct.ref_formatting_stack* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ref_formatting_stack**)* @pop_stack_element to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pop_stack_element(%struct.ref_formatting_stack** %0) #0 {
  %2 = alloca %struct.ref_formatting_stack**, align 8
  %3 = alloca %struct.ref_formatting_stack*, align 8
  %4 = alloca %struct.ref_formatting_stack*, align 8
  store %struct.ref_formatting_stack** %0, %struct.ref_formatting_stack*** %2, align 8
  %5 = load %struct.ref_formatting_stack**, %struct.ref_formatting_stack*** %2, align 8
  %6 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %5, align 8
  store %struct.ref_formatting_stack* %6, %struct.ref_formatting_stack** %3, align 8
  %7 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %3, align 8
  %8 = getelementptr inbounds %struct.ref_formatting_stack, %struct.ref_formatting_stack* %7, i32 0, i32 1
  %9 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %8, align 8
  store %struct.ref_formatting_stack* %9, %struct.ref_formatting_stack** %4, align 8
  %10 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %4, align 8
  %11 = icmp ne %struct.ref_formatting_stack* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %1
  %13 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %4, align 8
  %14 = getelementptr inbounds %struct.ref_formatting_stack, %struct.ref_formatting_stack* %13, i32 0, i32 0
  %15 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %3, align 8
  %16 = getelementptr inbounds %struct.ref_formatting_stack, %struct.ref_formatting_stack* %15, i32 0, i32 0
  %17 = call i32 @strbuf_addbuf(i32* %14, i32* %16)
  br label %18

18:                                               ; preds = %12, %1
  %19 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %3, align 8
  %20 = getelementptr inbounds %struct.ref_formatting_stack, %struct.ref_formatting_stack* %19, i32 0, i32 0
  %21 = call i32 @strbuf_release(i32* %20)
  %22 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %3, align 8
  %23 = call i32 @free(%struct.ref_formatting_stack* %22)
  %24 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %4, align 8
  %25 = load %struct.ref_formatting_stack**, %struct.ref_formatting_stack*** %2, align 8
  store %struct.ref_formatting_stack* %24, %struct.ref_formatting_stack** %25, align 8
  ret void
}

declare dso_local i32 @strbuf_addbuf(i32*, i32*) #1

declare dso_local i32 @strbuf_release(i32*) #1

declare dso_local i32 @free(%struct.ref_formatting_stack*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
